gracile-core/tests/fixtures/ts/snapshots/r#mod__fixtures__ts__interface.snap
---
source: gracile-core/tests/fixtures/ts/mod.rs
expression: output
---
export interface MyInterface {                  
  name?: string; // tags: text, personal
  id: number; // tags: numeric, unique
}
