gracile-core/tests/fixtures/ts/snapshots/r#mod__fixtures__ts__interface_typed.snap
---
source: gracile-core/tests/fixtures/ts/mod.rs
expression: output
---
export interface MyInterface<T> {
  name?: string; // tags: text, personal
  id: number; // tags: numeric, unique
}
